# compliance-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: streamlit_app.py
data/artifacts/: embedding_metadata.parquet  faiss.index  manifest.json
data/metadata/: docs.csv
data/processed/: chunks.parquet  pages.parquet  test.ipynb
eval/: README.md  make_report.py  questions.csv  run_ab.py  score_ab.py
src/: __init__.py  answer.py  artifacts.py  chunk.py  eval_metrics.py  index_embeddings.py  metadata.py  parse_pdf.py  rag.py  retrieve.py  retrieve_hybrid.py  retrieve_vector.py
tests/: test_artifacts.py  test_chunking.py  test_eval_metrics.py  test_metadata.py  test_rag_retrieval.py
