[project]
name = "snb-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "David Alvarez",email = "vigocpc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=2.24.0,<3.0.0)",
    "streamlit (>=1.54.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
